--- a/index.html
+++ b/index.html
@@ -158,9 +158,7 @@
     <footer class="footer">
       <section class="map">
         <h2 class="visually-hidden">Как нас найти</h2>
-        <!--Карта-->
-        <div class="map_size" style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт‑Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/?bookmarks=true&from=api-maps&ll=30.315137%2C59.940224&mode=bookmarks&origin=jsapi_2_1_76&utm_medium=mapframe&utm_source=maps&z=15" style="color:#eee;font-size:12px;position:absolute;top:14px;">Яндекс.Карты — поиск мест и адресов, городской транспорт</a><iframe src="https://yandex.ru/map-widget/v1/-/CCQdRKbpsA" width="100%" height="416px" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
-        <!--<img src="img/map1.jpg" width="1440" height="416" alt="Карта">-->
+        <div class="map_size"><iframe src="https://yandex.ru/map-widget/v1/-/CCQdRKbpsA" width="100%" height="416px" frameborder="0" allowfullscreen="true" style="position:relative;"></iframe></div>
         <div class="map_card">
           <p class="map_card_header">Nёrds design studio</p>
           <p class="card_text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
@@ -201,7 +199,7 @@
         </div>
       </section>
     </footer>
-    <!--
+    
     <section class="popup_container_wrapper">
       <div class="popup_container">
       <h2 class="visually-hidden">Напишите нам</h2>
@@ -226,7 +224,7 @@
       </form>
       </div>
     </section>
-  -->
+  
     
   </body>
 </html>
