--- a/Catalog.html
+++ b/Catalog.html
@@ -215,7 +215,7 @@
       <section class="map">
         <h2 class="visually-hidden">Как нас найти</h2>
         <!--Карта-->
-        <div class="map_size"><iframe src="https://yandex.ru/map-widget/v1/-/CCQdRKbpsA" width="100%" height="416px" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+        <div class="map_size"><iframe src="https://yandex.ru/map-widget/v1/-/CCQdRKbpsA" width="100%" height="416px" frameborder="0" allowfullscreen="true" style="position:relative;"></iframe></div>
         <!--<img src="img/map1.jpg" width="1440" height="416" alt="Карта">-->
         <div class="map_card">
           <p class="map_card_header">Nёrds design studio</p>
@@ -257,7 +257,7 @@
         </div>
       </section>
     </footer>
-    <!--
+
     <section class="popup_container_wrapper">
       <div class="popup_container">
       <h2 class="visually-hidden">Напишите нам</h2>
@@ -282,6 +282,7 @@
       </form>
       </div>
     </section>
-  -->
+
+  <script src="../1251825-nerds-28/js/Write_us.js"></script>
   </body>
 </html>
