--- a/Catalog.html
+++ b/Catalog.html
@@ -261,17 +261,17 @@
     <section class="popup_container_wrapper">
       <div class="popup_container">
       <h2 class="visually-hidden">Напишите нам</h2>
-      <form   action="https://echo.htmlacademy.ru" method="post">
+      <form class="popup_form" action="https://echo.htmlacademy.ru" method="post">
         <h2 class="popup_header">Напишите нам</h2>
         <button class="popup_close" type="button"></button>
         <div class="form_container">
           <p class="popup_area">
             <label class="popup_text" for="write_us_name">Ваше имя:</label>
-            <input class="input_style" id="write_us_name" type="text" name="name" placeholder="Имя Фамилия">
+            <input class="input_style_name" id="write_us_name" type="text" name="name" placeholder="Имя Фамилия">
           </p>
           <p class="popup_area">
             <label class="popup_text" for="write_us_email">Ваш e-mail:</label>
-            <input class="input_style" id="write_us_email" type="email" name="email" placeholder="email@example.com">
+            <input class="input_style_email" id="write_us_email" type="email" name="email" placeholder="email@example.com">
           </p>
           <p class="popup_area">
             <label class="popup_text" for="write_us_text">Текст письма:</label>
