--- a/Catalog.html
+++ b/Catalog.html
@@ -4,26 +4,25 @@
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link href="../1251825-nerds-28/css/Style.css" rel="stylesheet">
     <link rel="stylesheet" href="../1251825-nerds-28/css/normalize.css" >
-
+    <link href="../1251825-nerds-28/css/style.css" rel="stylesheet">
   </head>
   <body class="page_body">
     <header class="main-header">
       <nav class="main-navigation">
           <div class="container">
-            <a class="main-header-logo">
+            <a class="main-header-logo" href="index.html">
               <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
             </a>
             <div class="main_navigation_wrapper">
                 <ul class="site-navigation">
-                  <li><a href="Index.html">Студия</a></li>
+                  <li><a href="index.html">Студия</a></li>
                   <li><a href="#">Клиенты</a></li>
-                  <li><a class="active_page" href="Catalog.html">Магазин</a></li>
+                  <li><a class="active_page">Магазин</a></li>
                   <li><a href="#">Контакты</a></li>
                 </ul>
                 <div class="user-navigation">
-                  <a class="login-link" href="login.html">Корзина</a>
+                  <a class="login-link">Корзина</a>
                 </div>
             </div>
           </div>
@@ -47,17 +46,17 @@
               <div class="price_filter">
                 <div class="range-controls">
                   <div class="scale">
-                    <div class="bar" style="width: 30%; margin-left: 20%"></div>
+                    <div class="bar" style="width: 65%; margin-left: 7%"></div>
                   </div>
-                  <div class="toggle toggle-min" tabindex="0" style="left:20%"></div>
-                  <div class="toggle toggle-max" tabindex="0" style="left:50%"></div>
+                  <div class="toggle toggle-min" tabindex="0" style="left:7%"></div>
+                  <div class="toggle toggle-max" tabindex="0" style="left:65%"></div>
                 </div>
                 <div class="price-controls">
                   <label for="min-price">
-                    от <input type="number" name="min-price" value="0"> 
+                    от <input type="number" id="min-price" name="min-price" value="0"> 
                   </label>
-                  <label for="maz-price">
-                    до <input type="number" name="max-price" value="15000"> 
+                  <label for="max-price">
+                    до <input type="number" id="max-price" name="max-price" value="15000"> 
                   </label>
                 </div>
               </div>
@@ -65,28 +64,28 @@
 
             <fieldset class="filter_radio">
               <legend class="filter_text">Сетка:</legend>
-              <ul>
+              <ul class="form_list">
                 <li class="filter_item">
                   <input class="visually-hidden filter_input_radio" type="radio" name="type_of_product" value="adaptive" id="net1">
                   <label class="filter_option" for="net1">Адаптивная</label>
                 </li>
                 <li class="filter_item">
-                  <input class="visually-hidden filter_input_radio" type="radio" name="type_of_product" value="fixed" id="net1" checked>
-                  <label class="filter_option" for="net1">Фиксированная</label>
+                  <input class="visually-hidden filter_input_radio" type="radio" name="type_of_product" value="fixed" id="net2">
+                  <label class="filter_option" for="net2">Фиксированная</label>
                 </li>
                 <li class="filter_item">
-                  <input class="visually-hidden filter_input_radio" type="radio" name="type_of_product" value="rubber" id="net1" disabled>
-                  <label class="filter_option" for="net1">Резиновая</label>
+                  <input class="visually-hidden filter_input_radio" type="radio" name="type_of_product" value="rubber" id="net3">
+                  <label class="filter_option" for="net3">Резиновая</label>
                 </li>
               </ul>
             </fieldset>
 
             <fieldset class="filter_checkbox">
               <legend class="filter_text">Особенности:</legend>
-              <ul>
+              <ul class="form_list">
                 <li class="filter_item2">
                   <input class="visually-hidden filter_input_checkbox" type="checkbox" name="type_of_features" id="slider" checked>
-                  <label class="filter_option" class="filter_option" for="slider">Слайдер</label>
+                  <label class="filter_option filter_option" for="slider">Слайдер</label>
                 </li>
                 <li class="filter_item2">
                   <input class="visually-hidden filter_input_checkbox" type="checkbox" name="type_of_plus" id="plus">
@@ -101,7 +100,7 @@
                   <label class="filter_option" for="gallery">Галерея</label>
                 </li>
                 <li class="filter_item2">
-                  <input class="visually-hidden filter_input_checkbox" type="checkbox" name="type_of_basket" id="basket" checked disabled>
+                  <input class="visually-hidden filter_input_checkbox" type="checkbox" name="type_of_basket" id="basket">
                   <label class="filter_option" for="basket">Корзина</label>
                 </li>
               </ul>
@@ -114,7 +113,7 @@
           <section class="sorting_system_container">
             <h2 class="visually-hidden">Сортировка</h2>
             <p class="filter_text">Сортировать:</p>
-            <ul>
+            <ul class="sort">
               <li class="sorting_element">
                 <a class="sorting_system" href="#">По цене</a>
               </li>
@@ -124,18 +123,18 @@
               <li class="sorting_element">
                 <a class="sorting_system" href="#">По названию</a>
               </li>
-              
+              <li>                
+                  <a class="arrow" href="#"></a>
+              </li>
             </ul>
-            <div>
-              <a class="arrow" href="#"></a>
-            </div>
+            
           </section>
           <section class="main_catalog">
             <h2 class="visually-hidden">Каталог</h2>
             <ul class="catalog_list">
               <li class="good">
                 <a class="good_card" href="#">
-                  <img src="img/Goods1.jpg" width="358" height="580" alt="Сайт Седона">
+                  <img src="img/goods1.jpg" width="358" height="580" alt="Сайт Седона">
                 </a>
                 <div class="card">
                   <p class="filter_text">Sedona</p>
@@ -146,7 +145,7 @@
 
               <li class="good">
                 <a class="good_card" href="#">
-                  <img src="img/Goods2.jpg" width="358" height="578" alt="Сайт Pink">
+                  <img src="img/goods2.jpg" width="358" height="578" alt="Сайт Pink">
                 </a>
                 <div class="card">
                   <p class="filter_text">Pink app</p>
@@ -157,7 +156,7 @@
 
               <li class="good">
                 <a class="good_card"  href="#">
-                  <img src="img/Goods3.jpg" width="358" height="578" alt="Сайт Барбершоп">
+                  <img src="img/goods3.jpg" width="358" height="578" alt="Сайт Барбершоп">
                 </a>
                 <div class="card">
                   <p class="filter_text">Barbershop</p>
@@ -168,7 +167,7 @@
 
               <li class="good">
                 <a class="good_card" href="#">
-                  <img src="img/Goods4.jpg" width="358" height="578" alt="Сайт Mishka">
+                  <img src="img/goods4.jpg" width="358" height="578" alt="Сайт Mishka">
                 </a>
                 <div class="card">
                   <p class="filter_text">Mishka</p>
@@ -179,7 +178,7 @@
 
               <li class="good">
                 <a class="good_card" href="#">
-                  <img src="img/Goods5.jpg" width="358" height="578" alt="Сайт для обучения">
+                  <img src="img/goods5.jpg" width="358" height="578" alt="Сайт для обучения">
                 </a>
                 <div class="card">
                   <p class="filter_text">A plus</p>
@@ -190,7 +189,7 @@
 
               <li class="good">
                 <a class="good_card" href="#">
-                  <img src="img/Goods6.jpg" width="358" height="578" alt="Сайт компании Кваст">
+                  <img src="img/goods6.jpg" width="358" height="578" alt="Сайт компании Кваст">
                 </a>
                 <div class="card">
                   <p class="filter_text">Кваст</p>
@@ -214,24 +213,21 @@
     <footer class="footer">
       <section class="map">
         <h2 class="visually-hidden">Как нас найти</h2>
-        <!--Карта-->
-        <div class="map_size"><iframe src="https://yandex.ru/map-widget/v1/-/CCQdRKbpsA" width="100%" height="416px" frameborder="0" allowfullscreen="true" style="position:relative;"></iframe></div>
-        <!--<img src="img/map1.jpg" width="1440" height="416" alt="Карта">-->
+        <div class="map_size"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5924505699534!2d30.31627750309954!3d59.93890458370059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1592841059106!5m2!1sru!2sru" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
         <div class="map_card">
           <p class="map_card_header">Nёrds design studio</p>
           <p class="card_text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
-          <p class="phone">тел. +7(812)275-75-75</p>
-          <button class="map_button" type="button">Напишите нам</button>
+          <p class="phone"><a href="tel:+78122757575">тел. +7(812)275-75-75</a></p>
+          <a href="write_us.html" class="map_button">Напишите нам</a>
         </div>
         <div class="map_marker">
-          <img  src="img/map-marker1.svg" width="231" heigth="190" alt="расположение офиса Nerds на карте">
+          <img  src="img/map-marker1.svg" width="231" height="190" alt="расположение офиса Nerds на карте">
         </div>      
       </section>
 
       <section class="social">
         <div class="container">
           <h2 class="visually-hidden">Странички в соц сетях</h2>
-          <!--<div class="logo_container">-->
             <ul class="logo_element">
               <li class="logo_background logo-vk">
                 <a href="#">
@@ -249,7 +245,6 @@
                 </a>
               </li>
             </ul>
-          <!--</div>-->
           <div class="logo_container_description">
             <p class="friendship">Давайте дружить, это выгодно!</p>
             <p class="friendship_content">Скидка 10% для друзей из социальных сетей.</p>
@@ -283,6 +278,6 @@
       </div>
     </section>
 
-  <script src="../1251825-nerds-28/js/Write_us.js"></script>
+  <script src="../1251825-nerds-28/js/write_us.js"></script>
   </body>
 </html>
