--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../1251825-nerds-28/css/normalize.css" >
-    <link href="../1251825-nerds-28/css/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link href="css/style.css" rel="stylesheet">
   </head>
 
   <body class="page_body">
@@ -138,7 +138,7 @@
           <ul class="partner_list">
             <li class="partner">
               <a href="https://htmlacademy.ru/intensive/htmlcss">
-              <img class="partner_logo" src="img/Group5.png" width="199" height="68" alt="Логотип HTML academy">
+              <img class="partner_logo" src="img/group5.png" width="199" height="68" alt="Логотип HTML academy">
               </a>
             </li>
             <li class="partner">
@@ -220,6 +220,6 @@
       </form>
       </div>
     </section>
-  <script src="../1251825-nerds-28/js/write_us.js"></script>
+  <script src="js/write_us.js"></script>
   </body>
 </html>
