--- a/index.html
+++ b/index.html
@@ -220,6 +220,6 @@
       </form>
       </div>
     </section>
-  <script src="../js/write_us.js"></script>
+  <script src="js/write_us.js"></script>
   </body>
 </html>
