Protect_correct_error

--- a/catalog.html
+++ b/catalog.html
@@ -160,7 +160,7 @@
                 </a>
                 <div class="card">
                   <p class="filter_text">Barbershop</p>
-                  <p class="card_content">Сайт салона красоты для мужчин</p>
+                  <p class="card_content">Сайт салона красоты. Для мужчин, да.</p>
                   <a class="gb_properties price_button" href="#">9900 &#8381;</a>
                 </div>
               </li>
@@ -171,7 +171,7 @@
                 </a>
                 <div class="card">
                   <p class="filter_text">Mishka</p>
-                  <p class="card_content">Интернет-магазин вязанных изделий ручной работы</p>
+                  <p class="card_content">Интернет-магазин вязанных игрушек</p>
                   <a class="gb_properties price_button" href="#">9900 &#8381;</a>
                 </div>
               </li>
@@ -193,7 +193,7 @@
                 </a>
                 <div class="card">
                   <p class="filter_text">Кваст</p>
-                  <p class="card_content">Интернет-магазин крафтового кваса</p>
+                  <p class="card_content">Промо-сайт производителя крафтового кваса</p>
                   <a class="gb_properties price_button" href="#">9900 &#8381;</a>
                 </div>
               </li>
@@ -277,7 +277,6 @@
       </form>
       </div>
     </section>
-
   <script src="js/write_us.js"></script>
   </body>
 </html>
