Protect_correct_error_part2

--- a/catalog.html
+++ b/catalog.html
@@ -213,7 +213,9 @@
     <footer class="footer">
       <section class="map">
         <h2 class="visually-hidden">Как нас найти</h2>
-        <div class="map_size"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5924505699534!2d30.31627750309954!3d59.93890458370059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1592841059106!5m2!1sru!2sru" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
+        <div class="map_size">
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5924505699534!2d30.31627750309954!3d59.93890458370059!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1592841059106!5m2!1sru!2sru" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
         <div class="map_card">
           <p class="map_card_header">Nёrds design studio</p>
           <p class="card_text">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</p>
